test/fail/ClashingModuleImport.agda
-- Andreas, 2014-09-01 restored this test case

module ClashingModuleImport where

module M where

open import Imports.Module public
